--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -22,7 +22,7 @@ h6 {
 }
 
 .topnav {
-    font-size: 14px; 
+    font-size: 14px;
 }
 
 .lead {
@@ -167,4 +167,10 @@ footer {
 
 p.copyright {
     margin: 15px 0 0;
+}
+
+.my-img-responsive > .image > div > img{
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
